added 10 more studies

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -1111,6 +1111,25 @@ Include the names of the dataset and their licensing information.
     \hline
     10 & The Fear Reduction Exercised Early (FREE) approach to management of low back pain in general practice: A pragmatic cluster-randomised controlled trial~\cite{darlow2019fear} \\
     \hline
+    11 & Aerobic training for improved memory in patients with stress-related exhaustion: a randomized controlled trial~\cite{eskilsson2017aerobic} \\
+    \hline
+    12 & Trunk stabilising exercises promote sternal stability in patients after median sternotomy for heart valve surgery: a randomised trial~\cite{felaya2022trunk} \\
+    \hline
+    13 & Effectiveness of chest physiotherapy in infants hospitalized with acute bronchiolitis: a multicenter, randomized, controlled trial~\cite{gajdos2010effectiveness} \\
+    \hline
+    14 & Long-term survival and dialysis dependency following acute kidney injury in intensive care: extended follow-up of a randomized controlled trial~\cite{gallagher2014long} \\
+    \hline
+    15 & Exercise Training and Weight Gain in Obese Pregnant Women: A Randomized Controlled Trial (ETIP Trial)~\cite{garnaes2016exercise}\\
+    \hline
+    16 & Effects of Hormone Therapy on Cognition and Mood in Recently Postmenopausal Women: Findings from the Randomized, Controlled KEEPS-Cognitive and Affective Study~\cite{gleason2015effects} \\
+    \hline
+    17 & Evaluation of a very brief pedometer-based physical activity intervention delivered in NHS Health Checks in England: The VBI randomised controlled trial~\cite{hardeman2020evaluation} \\
+    \hline
+    18 & Effect of a Primary Care Walking Intervention with and without Nurse Support on Physical Activity Levels in 45- to 75-Year-Olds: The Pedometer And Consultation Evaluation (PACE-UP) Cluster Randomised Clinical Trial~\cite{harris2017effect} \\
+    \hline
+    19 & Digitally enabled aged care and neurological rehabilitation to enhance outcomes with Activity and MObility UsiNg Technology (AMOUNT) in Australia: A randomised controlled trial~\cite{hassett2020digitally} \\
+    \hline
+    20 & MINDflex Training for Cognitive Flexibility in Chronic Pain: A Randomized, Controlled Cross-Over Trial~\cite{jacobsen2020mindflex} \\
     \end{tabular}
       \caption{The table lists the randomized controlled trials included in our pilot annotation corpus.}\label{tab:corpus_studies}
  \end{table*}   
