--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -895,3 +895,113 @@
   year={2019},
   publisher={Public Library of Science San Francisco, CA USA}
 }
+
+@article{eskilsson2017aerobic,
+  title={Aerobic training for improved memory in patients with stress-related exhaustion: a randomized controlled trial},
+  author={Eskilsson, Therese and Slunga J{\"a}rvholm, Lisbeth and Malmberg Gavelin, Hanna and Stigsdotter Neely, Anna and Boraxbekk, Carl-Johan},
+  journal={BMC psychiatry},
+  volume={17},
+  number={1},
+  pages={1--10},
+  year={2017},
+  publisher={BioMed Central}
+}
+
+@article{felaya2022trunk,
+  title={Trunk stabilising exercises promote sternal stability in patients after median sternotomy for heart valve surgery: a randomised trial},
+  author={Felaya, El-Sayed Essam El-Sayed and Abd Al-Salam, Eman Hassan and Abd El-Azeim, Alshaymaa Shaaban},
+  journal={Journal of Physiotherapy},
+  volume={68},
+  number={3},
+  pages={197--202},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{gajdos2010effectiveness,
+  title={Effectiveness of chest physiotherapy in infants hospitalized with acute bronchiolitis: a multicenter, randomized, controlled trial},
+  author={Gajdos, Vincent and Katsahian, Sandrine and Beydon, Nicole and Abadie, Veronique and De Pontual, Lo{\"\i}c and Larrar, Sophie and Epaud, Ralph and Chevallier, Bertrand and Bailleux, Sylvain and Mollet-Boudjemline, Alix and others},
+  journal={PLoS medicine},
+  volume={7},
+  number={9},
+  pages={e1000345},
+  year={2010},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{gallagher2014long,
+  title={Long-term survival and dialysis dependency following acute kidney injury in intensive care: extended follow-up of a randomized controlled trial},
+  author={Gallagher, Martin and Cass, Alan and Bellomo, Rinaldo and Finfer, Simon and Gattas, David and Lee, Joanne and Lo, Serigne and McGuinness, Shay and Myburgh, John and Parke, Rachael and others},
+  journal={PLoS medicine},
+  volume={11},
+  number={2},
+  pages={e1001601},
+  year={2014},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{garnaes2016exercise,
+  title={Exercise training and weight gain in obese pregnant women: a randomized controlled trial (ETIP trial)},
+  author={Garn{\ae}s, Kirsti Krohn and M{\o}rkved, Siv and Salvesen, {\O}yvind and Moholdt, Trine},
+  journal={PLoS medicine},
+  volume={13},
+  number={7},
+  pages={e1002079},
+  year={2016},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{gleason2015effects,
+  title={Effects of hormone therapy on cognition and mood in recently postmenopausal women: findings from the randomized, controlled KEEPS--cognitive and affective study},
+  author={Gleason, Carey E and Dowling, N Maritza and Wharton, Whitney and Manson, JoAnn E and Miller, Virginia M and Atwood, Craig S and Brinton, Eliot A and Cedars, Marcelle I and Lobo, Rogerio A and Merriam, George R and others},
+  journal={PLoS medicine},
+  volume={12},
+  number={6},
+  pages={e1001833},
+  year={2015},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{hardeman2020evaluation,
+  title={Evaluation of a very brief pedometer-based physical activity intervention delivered in NHS Health Checks in England: The VBI randomised controlled trial},
+  author={Hardeman, Wendy and Mitchell, Joanna and Pears, Sally and Van Emmenis, Miranda and Theil, Florence and Gc, Vijay S and Vasconcelos, Joana C and Westgate, Kate and Brage, S{\o}ren and Suhrcke, Marc and others},
+  journal={PLoS medicine},
+  volume={17},
+  number={3},
+  pages={e1003046},
+  year={2020},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{harris2017effect,
+  title={Effect of a Primary Care Walking Intervention with and without Nurse Support on Physical Activity Levels in 45-to 75-Year-Olds: The P edometer A nd C onsultation E valuation (PACE-UP) Cluster Randomised Clinical Trial},
+  author={Harris, Tess and Kerry, Sally M and Limb, Elizabeth S and Victor, Christina R and Iliffe, Steve and Ussher, Michael and Whincup, Peter H and Ekelund, Ulf and Fox-Rushby, Julia and Furness, Cheryl and others},
+  journal={PLoS medicine},
+  volume={14},
+  number={1},
+  pages={e1002210},
+  year={2017},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{hassett2020digitally,
+  title={Digitally enabled aged care and neurological rehabilitation to enhance outcomes with Activity and MObility UsiNg Technology (AMOUNT) in Australia: A randomised controlled trial},
+  author={Hassett, Leanne and van den Berg, Maayken and Lindley, Richard I and Crotty, Maria and McCluskey, Annie and van der Ploeg, Hidde P and Smith, Stuart T and Schurr, Karl and Howard, Kirsten and Hackett, Maree L and others},
+  journal={PLoS medicine},
+  volume={17},
+  number={2},
+  pages={e1003029},
+  year={2020},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{jacobsen2020mindflex,
+  title={MINDflex training for cognitive flexibility in chronic pain: A randomized, controlled cross-over trial},
+  author={Jacobsen, Henrik B and Klungs{\o}yr, Ole and Landr{\o}, Nils I and Stiles, Tore C and Roche, Bryan T},
+  journal={Frontiers in Psychology},
+  volume={11},
+  pages={3614},
+  year={2020},
+  publisher={Frontiers}
+}
+
