added 31 studies from annotation

--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -1005,3 +1005,122 @@
   publisher={Frontiers}
 }
 
+@article{jeon2018effect,
+  title={Effect of bilateral lower limb strengthening exercise on balance and walking in hemiparetic patients after stroke: a randomized controlled trial},
+  author={Jeon, Hye Joo and Hwang, Byong Yong},
+  journal={Journal of physical therapy science},
+  volume={30},
+  number={2},
+  pages={277--281},
+  year={2018},
+  publisher={The Society of Physical Therapy Science}
+}
+
+@article{jourdain2013switching,
+  title={Switching HIV treatment in adults based on CD4 count versus viral load monitoring: a randomized, non-inferiority trial in Thailand},
+  author={Jourdain, Gonzague and Le C{\oe}ur, Sophie and Ngo-Giang-Huong, Nicole and Traisathit, Patrinee and Cressey, Tim R and Fregonese, Federica and Leurent, Baptiste and Collins, Intira J and Techapornroong, Malee and Banchongkit, Sukit and others},
+  journal={PLoS medicine},
+  volume={10},
+  number={8},
+  pages={e1001494},
+  year={2013},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{kamal2020effect,
+  title={Effect of 5-minute movies shown via a mobile phone app on risk factors and mortality after stroke in a low-to middle-income country: randomized controlled trial for the stroke caregiver dyad education intervention (Movies4Stroke)},
+  author={Kamal, Ayeesha and Khoja, Adeel and Usmani, Bushra and Magsi, Shahvaiz and Malani, Aresha and Peera, Zahra and Sattar, Saadia and Akram, Masood Ahmed and Shahnawaz, Sumaira and Zulfiqar, Maryam and others},
+  journal={JMIR mHealth and uHealth},
+  volume={8},
+  number={1},
+  pages={e12113},
+  year={2020},
+  publisher={JMIR Publications Inc., Toronto, Canada}
+}
+
+@article{kc2019effect,
+  title={Effect of a scaled-up neonatal resuscitation quality improvement package on intrapartum-related mortality in Nepal: a stepped-wedge cluster randomized controlled trial},
+  author={Kc, Ashish and Ewald, Uwe and Basnet, Omkar and Gurung, Abhishek and Pyakuryal, Sushil Nath and Jha, Bijay Kumar and Bergstr{\"o}m, Anna and Eriksson, Leif and Paudel, Prajwal and Karki, Sushil and others},
+  journal={PLoS Medicine},
+  volume={16},
+  number={9},
+  pages={e1002900},
+  year={2019},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{graham2019equity,
+  title={The equity impact of brief opportunistic interventions to promote weight loss in primary care: secondary analysis of the BWeL randomised trial},
+  author={Graham, J and Tudor, K and Jebb, SA and Lewis, A and Tearne, Sarah and Adab, Peymane and Begh, R and Jolly, Kate and Daley, Amanda and Farley, Amanda and others},
+  journal={BMC medicine},
+  volume={17},
+  pages={1--9},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{legro2022effects,
+  title={Effects of preconception lifestyle intervention in infertile women with obesity: The FIT-PLESE randomized controlled trial},
+  author={Legro, Richard S and Hansen, Karl R and Diamond, Michael P and Steiner, Anne Z and Coutifaris, Christos and Cedars, Marcelle I and Hoeger, Kathleen M and Usadi, Rebecca and Johnstone, Erica B and Haisenleder, Daniel J and others},
+  journal={PLoS Medicine},
+  volume={19},
+  number={1},
+  pages={e1003883},
+  year={2022},
+  publisher={Public Library of Science}
+}
+
+@article{lawlor2018nilvadipine,
+  title={Nilvadipine in mild to moderate Alzheimer disease: a randomised controlled trial},
+  author={Lawlor, Brian and Segurado, Ricardo and Kennelly, Sean and Olde Rikkert, Marcel GM and Howard, Robert and Pasquier, Florence and B{\"o}rjesson-Hanson, Anne and Tsolaki, Magda and Lucca, Ugo and Molloy, D William and others},
+  journal={PLoS medicine},
+  volume={15},
+  number={9},
+  pages={e1002660},
+  year={2018},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{li2016effects,
+  title={Effects of acetyl-L-carnitine and methylcobalamin for diabetic peripheral neuropathy: A multicenter, randomized, double-blind, controlled trial},
+  author={Li, Sheyu and Chen, Xiang and Li, Qianrui and Du, Juan and Liu, Zhimin and Peng, Yongde and Xu, Mian and Li, Qifu and Lei, Minxiang and Wang, Changjiang and others},
+  journal={Journal of diabetes investigation},
+  volume={7},
+  number={5},
+  pages={777--785},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@article{liu2018effect,
+  title={Effect of 24-month physical activity on cognitive frailty and the role of inflammation: the LIFE randomized clinical trial},
+  author={Liu, Zuyun and Hsu, Fang-Chi and Trombetti, Andrea and King, Abby C and Liu, Christine K and Manini, Todd M and Fielding, Roger A and Pahor, Marco and Newman, Anne B and Kritchevsky, Stephen and others},
+  journal={BMC medicine},
+  volume={16},
+  pages={1--10},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{lombard2016preventing,
+  title={Preventing weight gain in women in rural communities: a cluster randomised controlled trial},
+  author={Lombard, Catherine and Harrison, Cheryce and Kozica, Samantha and Zoungas, Sophia and Ranasinha, Sanjeeva and Teede, Helena},
+  journal={PLoS medicine},
+  volume={13},
+  number={1},
+  pages={e1001941},
+  year={2016},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{lockman2012nevirapine,
+  title={Nevirapine-versus lopinavir/ritonavir-based initial therapy for HIV-1 infection among women in Africa: a randomized trial},
+  author={Lockman, Shahin and Hughes, Michael and Sawe, Fred and Zheng, Yu and McIntyre, James and Chipato, Tsungai and Asmelash, Aida and Rassool, Mohammed and Kimaiyo, Sylvester and Shaffer, Douglas and others},
+  journal={PLoS medicine},
+  volume={9},
+  number={6},
+  pages={e1001236},
+  year={2012},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
