Structure for LLM evaluation added

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -1132,9 +1132,11 @@ Include the names of the dataset and their licensing information.
 \label{sec:llms}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-
-OXO
-
+\textbf{Prompt: } Write your prompt here...
+\newline
+\textbf{Answer: } Write the answer that ChatPDF gave
+\newline
+\textbf{Discussion: } Individual discussion on the reply from ChatPDF
 %
 %
 %
