Signalling question 1.1 updated

--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -147,6 +147,24 @@
   year = "2019"
 }
 
+@article{moher2010consort,
+  title={CONSORT 2010 explanation and elaboration: updated guidelines for reporting parallel group randomised trials. BMJ 340: c869},
+  author={Moher, D and Hopewell, S and Schulz, KF and Montori, V and G{\o}tzsche, PC and Devereaux, PJ and Elbourne, D and Egger, M and Altman, DG},
+  journal={doi. org/10.1136/bmj. c869},
+  year={2010}
+}
+
+@article{bello2017contemporary,
+  title={Contemporary methodological issues in drug development: the functionality of blinding is poorly studied},
+  author={Bello, Segun},
+  journal={Journal of Evidence-Based Medicine},
+  volume={10},
+  number={1},
+  pages={61--65},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
 %%============================================================================%%
 %% while using chicago reference style, both abbreviated and expanded form of %%
 %% author name format is acceptable. Refer below example for expanded form    %%
