--- a/sn-article.tex
+++ b/sn-article.tex
@@ -80,7 +80,7 @@
 
 \begin{document}
 
-\title[Article Title]{Supplementary Material for ``Developing Comprehensive Annotation Guidelines and a Corpus of Risk of Bias Assessment for Rehabilitation: A Methodological Approach''}
+\title[Article Title]{Supplementary Material for ``RoBuster: A Richly Annotated Corpus with Risk of Bias Text spans in Randomized Controlled Trials''}
 
 %%\pacs[JEL Classification]{D8, H51}
 
@@ -94,10 +94,10 @@
 \label{sec:generic}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-This section provides a comprehensive explanation of the structure of instructional placards and the general guidelines for using them effectively.
-The placards serve as a guide for annotators and are structured in a specific way to ensure consistent and accurate annotation of the Risk of Bias (RoB) questions.
-Each placard begins with a title that indicates the specific question being annotated.
-Following the title, a flowchart is provided to guide annotators through the process of annotating each RoB question based on the revised Cochrane RoB tool 2.0 (referred to as RoB 2.0 hereafter).
+This section provides a comprehensive explanation of the structure of the visual instructional placards and the general guidelines for using them effectively.
+The visual placards serve as a guide for annotators and are structured in a specific way to ensure consistent and accurate annotation of the Risk of Bias (RoB) questions.
+Each placard begins with a title that clearly indicates which signaling question it provides annotation instructions for. 
+Following the title, a flowchart is provided to guide annotators through the process of annotating each RoB question based on the revised Cochrane Risk of Bias tool 2 for assessment of Randomized Controlled Trials (RCTs) (referred to as RoB 2 hereafter).
 The flowcharts consist of several components, including:
 %
 %
@@ -105,6 +105,7 @@ The flowcharts consist of several components, including:
 \begin{enumerate}
     \item Diamond: Each flowchart contains diamond-shaped symbols that prompt annotators to search for specific information and ask decision-based questions. If the required information is found, instructions are provided on how to annotate it or guidance is given to proceed to the next diamond.
     \item Parallelogram: The output answer to the decision-based question is represented by a parallelogram-shaped symbol. Annotators are instructed to assign a label associated with this symbol if the requested information is found.
+    These labels align with the labels in the annotation scheme described in the main paper.
     \item Arrows: Color-coded arrows unilaterally flank the diamonds. These arrows provide instructions to annotators to first search for the required information in the full-text section suggested by the green arrow (e.g., Results or Methods section). If the information is not found in the green-coded arrow, they are instructed to check for it in the section suggested by the yellow-coded arrow (e.g., a table or a flowchart). The sections suggested in red arrows with a cross mark denote the information requested by the diamond should not be found in these sections.
     \item Thought bubble: Bubble-shaped text boxes, referred to as thought bubbles, contain comments that provide additional information, explanations, or instructions about specific steps or elements in the flowchart. These boxes are primarily coloured green but may also be red.
 \end{enumerate}
@@ -113,7 +114,8 @@ The flowcharts consist of several components, including:
 %
 The placards also include additional instructions in the bottom left corner, specifying whether annotators should annotate full sentences or only phrases.
 In the following subsections, detailed annotation guidelines are provided for each signalling question (SQ), using the instructional placards developed in consultation with RoB assessment and natural language processing experts.
-It is important to note that these generic annotation guidelines are supplementary to the detailed guidelines in the subsequent subsections and should be used in conjunction with the original detailed revised Cochrane RoB 2.0 guidelines~\cite{sterne2019rob}.
+It's important to emphasize that these visual instructional placards should be used in conjunction with the original detailed RoB 2 guidelines.
+The aim of our placards is to aid the text annotation rather than replace the original RoB 2 guidelines~\cite{sterne2019rob}.
 %
 %
 %
@@ -122,12 +124,8 @@ It is important to note that these generic annotation guidelines are supplementa
 \label{sec:dom1}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-The first risk domain in the RoB 2 tool assists assessment of the ``Bias stemming from the randomization process'' focusing on the three major aspects: 1. random sequence generation, 2. allocation concealment of the enrolled participants, and 3. was the randomized adequately implemented in practice.
-Proper randomization is central to randomized controlled trials and ensures that participants are assigned to intervention groups in an unbiased manner and enables comparison of intervention outcomes across all groups.
-%The first risk domain in the RoB 2 tool is assists assessment of the ``Bias stemming from the randomization process''.
-%It encompasses two subdomains: ``Random sequence generation'' and ``Allocation concealment''.
-%Randomization is a key methodological process in RCTs, designed to ensure that participants are assigned to different treatment groups in an unbiased and unpredictable manner.
-%This domain evaluates the likelihood of bias associated with the randomization process, a crucial element in mitigating potential selection bias in RCTs.
+The first risk domain in the RoB 2 tool assists assessment of the ``bias stemming from the randomization process'' focusing on the three major aspects: I. random sequence generation, II. allocation concealment of the enrolled participants, and III. was the randomized adequately implemented in practice.
+Proper randomization is essential to RCTs and it ensures that participants are assigned to intervention groups in an unbiased manner enabling an unbiased comparison of intervention outcomes across all groups~\cite{moher2010consort}.
 %
 %
 %
@@ -148,15 +146,16 @@ Proper randomization is central to randomized controlled trials and ensures that
 
 %Signalling question 1.1 ``Was the allocation sequence random?'' is used to assess the RoB related to the randomization process in a study.
 %It aims to determine whether the allocation of participants to different groups or interventions was done in a random manner.
-Signalling question 1.1 ``Was the allocation sequence random?'' assesses whether the allocation of participants to different groups or interventions was done in a random manner.
-If the allocation sequence is generated randomly, this reduces the risk of bias, as it ensures that the allocation is not influenced by the researchers' preferences or the participants' characteristics.
+Signalling question 1.1 ``Was the allocation sequence random?'' assesses whether the allocation of participants to different interventions groups was done in a random manner.
+If the allocation sequence is generated randomly, this reduces the bias risk, as it ensures that the allocation is not influenced by the researchers' preferences or the participants' characteristics.
 Some of the good random allocation methods include simple randomization (coin flipping, random number generator), stratified randomization, blocked randomization, cluster randomization, and adaptive randomization~\cite{sterne2019rob}.
-If the allocation sequence was not generated using a proper randomization method, this increases the risk of bias in the study.
+If the allocation sequence was not generated using a proper randomization method, this increases the bias risk in the study.
 For e.g., if the allocation sequence was generated using a non-random method, such as alternating assignment or assignment based on participant characteristics, this could introduce bias into the study.
+In fact improperly generated allocation sequence or inadequately concealed randomization sequence were associated with larger intervention estimates in RCTs~\cite{bello2017contemporary}.
 
 
 
-Follow the Flowchart~\ref{fig:1_1} for annotation instructions of the signalling question, ``Was the allocation sequence random?''.
+Follow the Flowchart~\ref{fig:1_1} for annotation instructions of the SQ 1.1: ``Was the allocation sequence random?''.
 Following the above explanation, the first diamond in the flowchart instructs the annotators to identify the randomization method for allocation sequence, and if a proper randomization method is found, mark the method description with ``1.1 Yes Good''.
 If the text describes a bad or improper method of randomization, mark the text with ``1.1 No Bad''.
 This description should be a few words or a phrase and not a complete sentence.
@@ -1072,75 +1071,27 @@ Check if all the outcomes analysis methods found in the trial protocol were also
 If some of these  methods of analysis found in the protocol were omitted in the clinical trial or in case there are additional analysis methods not reported in the protocol, then annotate the sentence(s) that mentions these methods in context of intervention effect assessment.
 If some of the methods were missing or some additional methods were conducted for outcomes analysis then label these descriptions as ``5.3 No Bad'' and otherwise ``5.3 Yes Good''.
 This information should be found in the methods section (statistical analysis) of the clinical trial.
-
 %
 %
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section*{Dataset details}
-\label{sec:dataset}
+%\section*{Prompts for LLM evaluation}
+%\label{sec:llms}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-
-Include the names of the dataset and their licensing information.
-
-\begin{enumerate}
-    \item Single high-dose buprenorphine for opioid craving during withdrawal~\cite{ahmadi2018single}
-    \item The effect of Kinesio taping on back pain in patients with Lenke Type 1 adolescent idiopathic scoliosis: A randomized controlled trial~\cite{atici2017effect}
-    \item A Randomised Controlled Trial to Evaluate the Administration of the Health Improvement Card as a Health Promotion Tool: A Physiotherapist-Led Community-Based Initiative~\cite{bai2020randomised}
-    \item Evaluation of RESPOND, a patient-centred program to prevent falls in older people presenting to the emergency department with a fall: A randomised controlled trial~\cite{barker2019evaluation}
-    \item Community-based football in men with prostate cancer: 1-year follow-up on a pragmatic, multicentre randomised controlled trial~\cite{bjerre2019community}
-    \item A multifactorial interdisciplinary intervention reduces frailty in older people: randomized trial~\cite{cameron2013multifactorial}
-    \item LThe prevention of musculoskeletal complaints: long-term effect of a work-related psychosocial coaching intervention compared to physiotherapy alone-a randomized controlled trial~\cite{becker2020prevention}
-    \item A single-oral bolus of 100,000 IU of cholecalciferol at hospital admission did not improve outcomes in the COVID-19 disease: the COVID-VIT-D-a randomised multicentre international clinical trial~\cite{cannata2022single}
-    \item Effect of a Nutrition Supplement and Physical Activity Program on Pneumonia and Walking Capacity in Chilean Older People: A Factorial Cluster Randomized Trial~\cite{dangour2011effect}
-    \item The Fear Reduction Exercised Early (FREE) approach to management of low back pain in general practice: A pragmatic cluster-randomised controlled trial~\cite{darlow2019fear}
-    \item Aerobic training for improved memory in patients with stress-related exhaustion: a randomized controlled trial~\cite{eskilsson2017aerobic}
-    \item Trunk stabilising exercises promote sternal stability in patients after median sternotomy for heart valve surgery: a randomised trial~\cite{felaya2022trunk}
-    \item Effectiveness of chest physiotherapy in infants hospitalized with acute bronchiolitis: a multicenter, randomized, controlled trial~\cite{gajdos2010effectiveness}
-    \item Long-term survival and dialysis dependency following acute kidney injury in intensive care: extended follow-up of a randomized controlled trial~\cite{gallagher2014long}
-    \item Exercise Training and Weight Gain in Obese Pregnant Women: A Randomized Controlled Trial (ETIP Trial)~\cite{garnaes2016exercise}
-    \item Effects of Hormone Therapy on Cognition and Mood in Recently Postmenopausal Women: Findings from the Randomized, Controlled KEEPS-Cognitive and Affective Study~\cite{gleason2015effects}
-    \item Evaluation of a very brief pedometer-based physical activity intervention delivered in NHS Health Checks in England: The VBI randomised controlled trial~\cite{hardeman2020evaluation}
-    \item Effect of a Primary Care Walking Intervention with and without Nurse Support on Physical Activity Levels in 45- to 75-Year-Olds: The Pedometer And Consultation Evaluation (PACE-UP) Cluster Randomised Clinical Trial~\cite{harris2017effect}
-    \item Digitally enabled aged care and neurological rehabilitation to enhance outcomes with Activity and MObility UsiNg Technology (AMOUNT) in Australia: A randomised controlled trial~\cite{hassett2020digitally}
-    \item MINDflex Training for Cognitive Flexibility in Chronic Pain: A Randomized, Controlled Cross-Over Trial~\cite{jacobsen2020mindflex}
-    \item Effect of bilateral lower limb strengthening exercise on balance and walking in hemiparetic patients after stroke: a randomized controlled trial~\cite{jeon2018effect}
-    \item Switching HIV Treatment in Adults Based on CD4 Count Versus Viral Load Monitoring: A Randomized, Non-Inferiority Trial in Thailand~\cite{jourdain2013switching}
-    \item Effect of 5-Minute Movies Shown via a Mobile Phone App on Risk Factors and Mortality After Stroke in a Low- to Middle-Income Country: Randomized Controlled Trial for the Stroke Caregiver Dyad Education Intervention (Movies4Stroke)~\cite{kamal2020effect}
-    \item Effect of a scaled-up neonatal resuscitation quality improvement package on intrapartum-related mortality in Nepal: a stepped-wedge cluster randomized controlled trial~\cite{kc2019effect}
-    \item The equity impact of brief opportunistic interventions to promote weight loss in primary care: secondary analysis of the BWeL randomised trial~\cite{graham2019equity}
-    \item Effects of preconception lifestyle intervention in infertile women with obesity: The FIT-PLESE randomized controlled trial~\cite{legro2022effects}
-    \item Nilvadipine in mild to moderate Alzheimer disease: A randomised controlled trial~\cite{lawlor2018nilvadipine}
-    \item Effects of acetyl-L-carnitine and methylcobalamin for diabetic peripheral neuropathy: A multicenter, randomized, double-blind, controlled trial~\cite{li2016effects}
-    \item Effect of 24-month physical activity on cognitive frailty and the role of inflammation: the LIFE randomized clinical trial~\cite{liu2018effect}
-    \item Nevirapine-versus lopinavir/ritonavir-based initial therapy for HIV-1 infection among women in Africa: a randomized trial~\cite{lockman2012nevirapine}
-    \item Preventing weight gain in women in rural communities: a cluster randomised controlled trial~\cite{lombard2016preventing}
-    \item 
-    \item 
-    \item 
-    \item 
-\end{enumerate}
+%The detailed results of LLM evaluation on 10 of the 60 RCTs are presented in this section.
 
 
 
+%\textbf{Prompt: } Write your prompt here...
+%\newline
+%\textbf{Answer: } Write the answer that ChatPDF gave
+%\newline
+%\textbf{Discussion: } Individual discussion on the reply from ChatPDF
 %
 %
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section*{Prompts for LLM evaluation}
-\label{sec:llms}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-\textbf{Prompt: } Write your prompt here...
-\newline
-\textbf{Answer: } Write the answer that ChatPDF gave
-\newline
-\textbf{Discussion: } Individual discussion on the reply from ChatPDF
-%
-%
-%
-\clearpage
+%\clearpage
 %%===========================================================================================%%
 %% If you are submitting to one of the Nature Portfolio journals using the eJP submission   %%
 %% system, please include the references within the manuscript file itself. You may do this  %%
