--- a/sn-article.tex
+++ b/sn-article.tex
@@ -167,12 +167,12 @@ Notice that for this signalling question, the annotators are required to mark ph
 %
 \subsection*{Signalling question: 1.2}
 %
-The signalling question ``Was the allocation sequence concealed until participants were enrolled and assigned to interventions?'' focuses on assessing the risk of bias related to allocation concealment in a study.
+The signalling question ``Was the allocation sequence concealed until participants were enrolled and assigned to interventions?'' focuses on assessing the bias risk related to allocation concealment in a study.
 In RCTs, the allocation sequence determines the order in which participants are assigned to each intervention group.
-Adequate concealment of the allocation sequence refers to the process of keeping the sequence hidden from those who are involved in enrolling and assigning participants to intervention groups.
-This helps to prevent the possibility of selection bias, which can occur if those enrolling participants in the trial have knowledge of the allocation sequence and can manipulate the assignment of participants to intervention groups based on that knowledge.
-If the allocation sequence is not adequately concealed until participants are enrolled and assigned to interventions, this can increase the risk of bias and may lead to systematic differences between the intervention groups.
-For example, if the allocation sequence is known to the investigators or coordinators, they may selectively enroll participants who are more likely to benefit from a particular intervention, or they may assign participants to one intervention group over another based on personal biases or preferences.
+Adequate concealment of the allocation sequence refers to the process of keeping the sequence hidden from those who are responsible in enrolling and assigning participants to intervention groups.
+Proper allocation concealment helps prevent the possibility of selection bias, which can occur if those enrolling participants in the trial have knowledge of the allocation sequence and can manipulate the assignment of participants to intervention groups based on that knowledge.
+If the allocation sequence is not adequately concealed until participants are enrolled and assigned to interventions, this can increase the risk of bias and may lead to systematic differences between the intervention groups~\cite{bello2017contemporary}.
+For example, if the allocation sequence is known to the investigators or coordinators, they may selectively enroll participants who are more likely to benefit from a particular treatment, or they may assign participants to one treatment group over another based on personal biases.
 
 %
 %
@@ -189,15 +189,19 @@ For example, if the allocation sequence is known to the investigators or coordin
 
 
 
-Follow the Flowchart~\ref{fig:1_2} for annotation instructions of the signalling question, ``Was the allocation sequence concealed until participants were enrolled and assigned to interventions?''.
-Based on the explanation given earlier, the first diamond in the flowchart guides annotators to identify the method of allocation concealment. If a proper allocation concealment method is identified but lacks certain details necessary for making a judgment, it should be marked with ``1.2 No Information''.
+Follow the Flowchart~\ref{fig:1_2} for annotation instructions of SQ 1.2: ``Was the allocation sequence concealed until participants were enrolled and assigned to interventions?''.
+Based on the explanation given earlier, the first diamond in the flowchart guides annotators to identify the method of allocation concealment.
+If a proper allocation concealment method is identified but lacks certain details necessary for making a judgment, it should be marked with ``1.2 No Information''.
 For instance, if the description mentions the use of sealed envelopes but does not specify whether they were opaque, it would be marked as ``1.2 No Information''.
 On the other hand, if enough information is provided to make a judgment, it should be marked with ``1.2 Yes Good''.
-Good methods of allocation concealment include central randomization, sealed opaque envelopes, and using online randomization tools that offer to securely generate and conceal the allocation sequence.
+Good methods of allocation concealment include central randomization, sealed opaque envelopes, and using online randomization tools that offer to securely generate and conceal the allocation sequence~\cite{sterne2019rob}.
 If an improper method of allocation concealment is utilized, then mark the method with ``1.2 No Bad''.
-The improper methods of allocation concealment include using an open list, a predictable sequence like alternating using the date of birth or other characteristics, and/or using the participant's choice.
-The primary sources for finding information about allocation concealment are the methods section (first priority, as shown in the Green arrow) and the abstract (second priority, as shown in the yellow arrow).
-Notice that for this signalling question, too, the annotators are required to mark phrases rather than full sentences~\cite{sterne2019rob,rahim2021effect}.
+The improper methods of allocation concealment include using an open list, a predictable sequence like alternating using the date of birth or other characteristics, or using the participant's choice.
+The primary sources for finding information about allocation concealment are the methods section (first priority, as shown in the Green arrow) and the abstract (second priority, as shown in the yellow arrow)~\cite{sterne2019rob,rahim2021effect}.
+%Notice that for this signalling question, too, the annotators are required to mark phrases rather than full sentences.
+For this signalling question, annotate a whole sentence if the whole sentence corresponds to answering this question and annotate a phrase if only a part of the sentence does concern answering the question.
+For example, annotate the whole sentence ``A computer generated random sequence list was generate with two strata and random block size with sizes of two to eight'' because annotating the whole sentence is necessary to answer the question.
+For this next example, annotate only the second part of the sentence, ``A random sequence was generated with a software (stratified for site and with random block sizes), and the allocation was concealed with sealed opaque envelopes.''
 
 
 %Following the above explanation, the first diamond in the flowchart~\ref{fig:1_2} instructs the annotators to identify the method of allocation concealment, and if a proper allocation concealment method is found, but it lacks certain details pertaining to making a judgement, then mark the method and label it with ``1.2 No Information''.
